--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -104,5 +104,18 @@ services:
       timeout: 10s
       retries: 5
 
+  flower:
+    image: mher/flower
+    command: celery --broker=redis://redis:6379/0 flower
+    ports:
+      - '5555:5555'
+    depends_on:
+      - redis
+    healthcheck:
+      test: ["CMD-SHELL", "wget --spider -q http://localhost:5555/ || exit 1"]
+      interval: 60s
+      timeout: 30s
+      retries: 5
+
 volumes:
   postgres_data:
