--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -143,5 +143,19 @@ services:
       timeout: 30s
       retries: 5
 
+  elastic:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.3
+    environment:
+      - "xpack.security.enabled=false"
+      - "discovery.type=single-node"
+      - "ES_JAVA_OPTS=-Xms750m -Xmx750m"
+    ports:
+      - 9200:9200
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
 volumes:
   postgres_data:
